--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
-  <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/></script>
-</head>
-  <body><div id="root"></div><script type="module" src="/src/main.jsx"></script></body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Distance to Time Calculator</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
